--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -3,9 +3,9 @@
 #   - https://github.com/actions/download-artifact
 #   - https://github.com/actions/setup-python
 #   - https://github.com/actions/upload-artifact
-#   - https://github.com/awalsh128/cache-apt-pkgs-action
 #   - https://github.com/codecov/codecov-action
 #   - https://github.com/prefix-dev/setup-pixi
+#   - https://github.com/pyvista/setup-headless-display-action
 
 name: ci-tests
 
@@ -36,6 +36,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     env:
+      ALLOW_PLOTTING: true
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       ENV_NAME: "ci-tests"
 
@@ -46,7 +47,6 @@ jobs:
         version: ["py311", "py312"]
         session: ["tests"]
         marker: ["image", "not image"]
-        posargs: ["--fail_extra_image_cache --generated_image_dir test_images --xvfb-backend xvfb --durations=10"]
         include:
           - version: "py312"
             coverage: "--cov-report= --cov=geovista"
@@ -63,11 +63,7 @@ jobs:
         run: |
           echo "CACHE_PERIOD=$(date +%Y).$(expr $(date +%U) / ${CACHE_WEEKS})" >> ${GITHUB_ENV}
 
-      - name: "apt cache"
-        uses: awalsh128/cache-apt-pkgs-action@7ca5f46d061ad9aa95863cd9b214dd48edef361d
-        with:
-          packages: libgl1-mesa-glx xvfb
-          version: 1.0
+      - uses: pyvista/setup-headless-display-action@7d84ae825e6d9297a8e99bdbbae20d1b919a0b19
 
       - name: "setup pixi"
         uses: prefix-dev/setup-pixi@14c8aabd75893f83f4ab30c03e7cf853c8208961
@@ -91,7 +87,7 @@ jobs:
         env:
           PY_COLORS: "1"
         run: |
-          pixi run --frozen pytest -m "${{ matrix.marker }}" ${{ matrix.posargs }} ${{ matrix.coverage }}
+          xvfb-run -a pixi run --frozen pytest -m "${{ matrix.marker }}" --fail_extra_image_cache --generated_image_dir test_images ${{ matrix.coverage }}
 
       - name: "upload test images"
         if: ${{ failure() }}
