--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ exclude = ['\.__eq__$', '\.__ne__$', '\.__repr__$']
 addopts = [
   "--doctest-continue-on-failure",
   "--doctest-modules",
+  "--durations=10",
   "--import-mode=importlib",
   "--strict-config",
   "--strict-markers",
@@ -532,4 +533,3 @@ pytest = ">=8.4.0,<9"
 pytest-cov = ">=6.1.1,<7"
 pytest-mock = ">=3.14.1,<4"
 pytest-pyvista = ">=0.1.9,<0.2"
-pytest-xvfb = ">=3.1.1,<4"
