--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -41,7 +41,6 @@ dependencies:
 - pytest-cov >=6.1.1,<7
 - pytest-mock >=3.14.1,<4
 - pytest-pyvista >=0.1.9,<0.2
-- pytest-xvfb >=3.1.1,<4
 - cartopy >=0.24.0,<0.25
 - click >=8.2.1,<9
 - click-default-group >=1.2.4,<2
@@ -54,10 +53,10 @@ dependencies:
 - pooch >=1.8.2,<2
 - pykdtree >=1.4.1,<2
 - pyproj >=3.7.1,<4
-- pyvista >=0.43.1,<0.44.3
+- pyvista >=0.45.0,<0.46.0
 - setuptools >=80.9.0,<81
 - setuptools-scm >=8.3.1,<9
-- vtk <9.4
+- vtk >=9.4.2,<9.5.0
 - pip
 - pip:
   - -e .
