--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -27,7 +27,6 @@ defaults:
 env:
   ALLOW_PLOTTING: true
   CARTOPY_SHARE_DIR: ~/.local/share/cartopy
-  ENV_NAME: "ci-tests-pypi"
   GEOVISTA_POOCH_MUTE: true
   PY_COLORS: "1"
   SHELLOPTS: "errexit:pipefail"
@@ -84,7 +83,7 @@ jobs:
       id: cartopy-cache
       with:
         path: ~/.local/share/cartopy
-        key: ${{ runner.os }}-cartopy-${{ env.ENV_NAME }}-${{ env.CACHE_PERIOD }}
+        key: ${{ runner.os }}-cartopy-data-${{ env.CACHE_PERIOD }}
 
     - if: steps.cartopy-cache.outputs.cache-hit != 'true'
       env:
