--- a/.github/workflows/composite/cartopy-cache/action.yml
+++ b/.github/workflows/composite/cartopy-cache/action.yml
@@ -5,9 +5,6 @@ inputs:
   cache_period:
     description: "conda environment cache timestamp"
     required: true
-  env_name:
-    description: "gha environment name"
-    required: true
 
 runs:
   using: "composite"
@@ -16,7 +13,7 @@ runs:
       id: cartopy-cache
       with:
         path: ~/.local/share/cartopy
-        key: ${{ runner.os }}-cartopy-${{ inputs.env_name }}-${{ inputs.cache_period }}
+        key: ${{ runner.os }}-cartopy-data-${{ inputs.cache_period }}
 
     - if: steps.cartopy-cache.outputs.cache-hit != 'true'
       env:
