--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -66,7 +66,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["py311", "py312"]
+        version: ["py311", "py312", "py313"]
 
     steps:
       - uses: actions/checkout@v4
