--- a/pyproject.toml
+++ b/pyproject.toml
@@ -309,6 +309,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 
 
 [tool.setuptools.dynamic.optional-dependencies]
+devs = { file = ["requirements/pypi-optional-devs.txt"] }
 docs = { file = ["requirements/pypi-optional-docs.txt"] }
 exam = { file = ["requirements/pypi-optional-exam.txt"] }
 test = { file = ["requirements/pypi-optional-test.txt"] }
@@ -414,43 +415,43 @@ platforms = ["linux-64"]
 
 [tool.pixi.environments]
 default = { features = [], solve-group = "default" }
-dev = { features = ["dev"], solve-group = "default" }
-docs = { features = ["dev", "docs"], solve-group = "default" }
-geovista = { features = ["dev", "docs", "test"], solve-group = "default" }
-test = { features = ["dev", "test"], solve-group = "default" }
+devs = { features = ["devs"], solve-group = "default" }
+docs = { features = ["devs", "docs"], solve-group = "default" }
+geovista = { features = ["devs", "docs", "test"], solve-group = "default" }
+test = { features = ["devs", "test"], solve-group = "default" }
 
-dev-py311 = { features = ["dev", "py311"], solve-group = "py311" }
-docs-py311 = { features = ["dev", "docs", "py311"], solve-group = "py311" }
+devs-py311 = { features = ["devs", "py311"], solve-group = "py311" }
+docs-py311 = { features = ["devs", "docs", "py311"], solve-group = "py311" }
 geovista-py311 = { features = [
-  "dev",
+  "devs",
   "docs",
   "py311",
   "test",
 ], solve-group = "py311" }
 py311 = { features = ["py311"], solve-group = "py311" }
-test-py311 = { features = ["dev", "py311", "test"], solve-group = "py311" }
+test-py311 = { features = ["devs", "py311", "test"], solve-group = "py311" }
 
-dev-py312 = { features = ["dev", "py312"], solve-group = "py312" }
-docs-py312 = { features = ["dev", "docs", "py312"], solve-group = "py312" }
+devs-py312 = { features = ["devs", "py312"], solve-group = "py312" }
+docs-py312 = { features = ["devs", "docs", "py312"], solve-group = "py312" }
 geovista-py312 = { features = [
-  "dev",
+  "devs",
   "docs",
   "py312",
   "test",
 ], solve-group = "py312" }
 py312 = { features = ["py312"], solve-group = "py312" }
-test-py312 = { features = ["dev", "py312", "test"], solve-group = "py312" }
+test-py312 = { features = ["devs", "py312", "test"], solve-group = "py312" }
 
-dev-py313 = { features = ["dev", "py313"], solve-group = "py313" }
-docs-py313 = { features = ["dev", "docs", "py313"], solve-group = "py313" }
+devs-py313 = { features = ["devs", "py313"], solve-group = "py313" }
+docs-py313 = { features = ["devs", "docs", "py313"], solve-group = "py313" }
 geovista-py313 = { features = [
-  "dev",
+  "devs",
   "docs",
   "py313",
   "test",
 ], solve-group = "py313" }
 py313 = { features = ["py313"], solve-group = "py313" }
-test-py313 = { features = ["dev", "py313", "test"], solve-group = "py313" }
+test-py313 = { features = ["devs", "py313", "test"], solve-group = "py313" }
 
 [tool.pixi.dependencies]
 cartopy = ">=0.24.0,<0.25"
@@ -470,18 +471,19 @@ setuptools = ">=80.9.0,<81"
 setuptools-scm = ">=8.3.1,<9"
 vtk = ">=9.4.2,<9.5.0"
 
-[tool.pixi.feature.dev.dependencies]
+[tool.pixi.feature.devs.dependencies]
 fastparquet = ">=2024.11.0,<2025"
 h3-py = ">=4.2.2,<5"
 pandas = ">=2.2.3,<3"
 pre-commit = ">=4.2.0,<5"
 rasterio = ">=1.4.3,<2"
 ruff = ">=0.11.12,<0.12"
+zizmor = ">=1.9.0,<2"
 
-[tool.pixi.feature.dev.pypi-dependencies]
+[tool.pixi.feature.devs.pypi-dependencies]
 geovista = { path = ".", editable = true }
 
-[tool.pixi.feature.dev.tasks]
+[tool.pixi.feature.devs.tasks]
 fmt = "ruff format"
 lint = "ruff check"
 
