--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -9,6 +9,7 @@ dependencies:
 - pre-commit >=4.2.0,<5
 - rasterio >=1.4.3,<2
 - ruff >=0.11.12,<0.12
+- zizmor >=1.9.0,<2
 - ipykernel >=6.29.5,<7
 - ipywidgets >=8.1.7,<9
 - joblib >=1.5.1,<2
