--- a/.github/workflows/ci-approve.yml
+++ b/.github/workflows/ci-approve.yml
@@ -1,5 +1,5 @@
 # Reference:
-#   - https://github.com/tibdex/github-app-token
+#   - https://github.com/actions/create-github-app-token
 #   - https://github.com/hmarr/auto-approve-action
 
 name: ci-approve
@@ -21,11 +21,11 @@ jobs:
     if: github.actor == 'dependabot[bot]'
     steps:
       - name: "generate token"
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a
+        uses: actions/create-github-app-token@v2
         id: generate-token
         with:
-          app_id: ${{ secrets.AUTH_APP_ID }}
-          private_key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.AUTH_APP_ID }}
+          private-key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
 
       - uses: hmarr/auto-approve-action@f0939ea97e9205ef24d872e76833fa908a770363
         with:
