--- a/.github/workflows/ci-changelog.yml
+++ b/.github/workflows/ci-changelog.yml
@@ -19,6 +19,9 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  id-token: none
+
 jobs:
   changelog:
     name: 'validate changelog'
@@ -33,6 +36,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: actions/setup-python@v5
         with:
