--- a/.github/workflows/ci-stale.yml
+++ b/.github/workflows/ci-stale.yml
@@ -12,6 +12,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  actions: write
+  issues: write
+  pull-requests: write
+
 jobs:
   stale:
     runs-on: "ubuntu-latest"
