--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -17,6 +17,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  id-token: none
+
 env:
   NAME: "geovista"
   SHELLOPTS: "errexit:pipefail"
@@ -35,6 +38,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: "environment configure"
         run: |
@@ -96,11 +100,16 @@ jobs:
 
       - name: "show pull-request"
         if: ${{ hashFiles('diff.md') }}
+        env:
+          CPR_PR_NUMBER: ${{ steps.cpr.outputs.pull-request-number }}
+          CPR_PR_URL: ${{ steps.cpr.outputs.pull-request-url }}
+          CPR_PR_OPERATION: ${{ steps.cpr.outputs.pull-request-operation }}
+          CPR_PR_HEAD_SHA: ${{ steps.cpr.outputs.pull-request-head-sha }}
         run: |
           echo "### :rocket: Pull-Request Summary" >> ${GITHUB_STEP_SUMMARY}
           echo "" >> ${GITHUB_STEP_SUMMARY}
           echo "The following locks pull-request has been auto-generated:" >> ${GITHUB_STEP_SUMMARY}
-          echo "- **PR** #${{ steps.cpr.outputs.pull-request-number }}" >> ${GITHUB_STEP_SUMMARY}
-          echo "- **URL** ${{ steps.cpr.outputs.pull-request-url }}" >> ${GITHUB_STEP_SUMMARY}
-          echo "- **Operation** [${{ steps.cpr.outputs.pull-request-operation }}]" >> ${GITHUB_STEP_SUMMARY}
-          echo "- **SHA** ${{ steps.cpr.outputs.pull-request-head-sha }}" >> ${GITHUB_STEP_SUMMARY}
+          echo "- **PR** #${CPR_PR_NUMBER}" >> ${GITHUB_STEP_SUMMARY}
+          echo "- **URL** ${CPR_PR_URL}" >> ${GITHUB_STEP_SUMMARY}
+          echo "- **Operation** [${CPR_PR_OPERATION}]" >> ${GITHUB_STEP_SUMMARY}
+          echo "- **SHA** ${CPR_PR_HEAD_SHA}" >> ${GITHUB_STEP_SUMMARY}
