--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -20,6 +20,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  issues: write
+
 defaults:
   run:
     shell: bash -l {0}
@@ -46,6 +49,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        persist-credentials: false
 
     - uses: actions/setup-python@v5
       with:
