--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -13,6 +13,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   autoupdate:
     runs-on: "ubuntu-latest"
