Add zizmor security linter to pre-commit (#1257)
* Add zizmor security linter to pre-commit

* bump zizmor pre-commit version and repo

* zizmor remediation

* add changelog news fragment

---------

Co-authored-by: Bill Little <bill.james.little@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -130,3 +130,8 @@ repos:
     hooks:
       - id: sphinx-lint
         args: [--ignore, ".pixi", --ignore, "changelog/template.rst"]
+
+  - repo: https://github.com/zizmorcore/zizmor-pre-commit
+    rev: v1.9.0
+    hooks:
+      - id: zizmor
