--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
     directories:
       - "/"
       - "/.github/workflows/composite/*"
+    open-pull-requests-limit: 3
     schedule:
       interval: "daily"
     groups:
@@ -24,6 +25,7 @@ updates:
 
   - package-ecosystem: "pip"
     directory: "/"
+    open-pull-requests-limit: 3
     schedule:
       interval: "weekly"
       day: "sunday"
