--- a/pyproject.toml
+++ b/pyproject.toml
@@ -551,4 +551,5 @@ codecov = ">=2.1.13,<3"
 pytest = ">=8.4.0,<9"
 pytest-cov = ">=6.1.1,<7"
 pytest-mock = ">=3.14.1,<4"
+pytest-pretty = ">=1.3.0,<2"
 pytest-pyvista = ">=0.2.0,<0.3"
