--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -41,6 +41,7 @@ dependencies:
 - pytest >=8.4.0,<9
 - pytest-cov >=6.1.1,<7
 - pytest-mock >=3.14.1,<4
+- pytest-pretty >=1.3.0,<2
 - pytest-pyvista >=0.2.0,<0.3
 - cartopy >=0.24.0,<0.25
 - click >=8.2.1,<9
