docs: auto detect and skip rtd PR build when noop (#1592)
* docs: auto detect and skip rtd PR build when noop

* add changelog news fragment

* add semi-colons

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,15 +10,26 @@ build:
   jobs:
     post_checkout:
       # require full history for correct setuptools-scm version discovery
-      - git fetch --unshallow
-      - git fetch --all
+      - |
+        git fetch --unshallow;
+        git fetch --all;
+        #
+        # https://docs.readthedocs.com/platform/stable/build-customization.html#cancel-build-based-on-a-condition
+        # https://docs.readthedocs.com/platform/stable/reference/environment-variables.html#envvar-READTHEDOCS_VERSION_TYPE
+        #
+        if [ "${READTHEDOCS_VERSION_TYPE}" = "external" ] && git diff --quiet origin/main -- .all-contributorsrc .readthedocs.yml CHANGELOG.rst pixi.lock pyproject.toml changelog/ requirements/;
+        then
+          # (sum(list("skip".encode("ascii"))) % 256) == 183
+          exit 183;
+        fi
     pre_install:
       # keep checkout untainted from RTD to ensure correct
       # setuptools-scm version
       - git stash
     post_install:
-      - git stash pop
-      - geovista download --operational --decompress
+      - |
+        git stash pop;
+        geovista download --operational --decompress;
 
 conda:
   environment: requirements/locks/rtd.yml
