--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -64,9 +64,14 @@ jobs:
           labels: 'type: examples'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
-        if: startsWith(github.event.pull_request.head.ref, 'spec') || startsWith(github.event.pull_request.head.ref, 'spec0')
+        if: startsWith(github.event.pull_request.head.ref, 'merge-back') || startsWith(github.event.pull_request.head.ref, 'mb')
         with:
-          labels: 'type: spec-0'
+          labels: 'type: merge-back'
+
+      - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
+        if: startsWith(github.event.pull_request.head.ref, 'pixi')
+        with:
+          labels: 'pixi'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: startsWith(github.event.pull_request.head.ref, 'perf') || startsWith(github.event.pull_request.head.ref, 'performance')
@@ -74,6 +79,6 @@ jobs:
           labels: 'type: performance'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
-        if: startsWith(github.event.pull_request.head.ref, 'merge-back') || startsWith(github.event.pull_request.head.ref, 'mb')
+        if: startsWith(github.event.pull_request.head.ref, 'spec') || startsWith(github.event.pull_request.head.ref, 'spec0')
         with:
-          labels: 'type: merge-back'
+          labels: 'type: spec-0'
