--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: "v0.13.3"
     hooks:
-      - id: ruff
+      - id: ruff-check
         types: [file, python]
         args: [--fix, --show-fixes]
       - id: ruff-format
