--- a/pyproject.toml
+++ b/pyproject.toml
@@ -490,7 +490,7 @@ platformdirs = ">=4.3.8,<5"
 pooch = ">=1.8.2,<2"
 pykdtree = ">=1.4.1,<2"
 pyproj = ">=3.7.1,<4"
-pyvista = ">=0.45.0,<0.46.0"
+pyvista = ">=0.45.0,<0.47.0"
 setuptools = ">=80.9.0,<81"
 setuptools-scm = ">=8.3.1,<9"
 
@@ -520,7 +520,7 @@ nest-asyncio = ">=1.6.0,<2"
 numpydoc = ">=1.8.0,<2"
 pydata-sphinx-theme = "!=0.16.0,!=0.16.1,<0.16.2" # https://github.com/bjlittle/geovista/issues/1247
 sphinx = ">=8.2.3,<9"
-sphinx-autoapi = ">=3.5.0,<4"
+#sphinx-autoapi = ">=3.5.0,<4" # https://github.com/conda-forge/sphinx-autoapi-feedstock/pull/50
 sphinx-book-theme = ">=1.1.3,<2"
 sphinx-click = ">=6.0.0,<7"
 sphinx-copybutton = ">=0.5.2,<0.6"
@@ -529,14 +529,15 @@ sphinx-gallery = ">=0.19.0,<0.20"
 sphinx-tags = ">=0.4,<0.5"
 sphinx-togglebutton = ">=0.3.2,<0.4"
 sphinx_changelog = ">=1.6.0,<2"
-towncrier = ">=24.8.0,<25"
-trame = "==3.10.2"
+towncrier = ">=24.8.0,<26"
+trame = "==3.11.0"
 trame-client = ">=3.9.0,<4"
 trame-server = ">=3.4.0,<4"
-trame-vtk = "==2.8.15"
+trame-vtk = "==2.9.1"
 trame-vuetify = "==3.0.1"
 
 [tool.pixi.feature.docs.pypi-dependencies]
+sphinx-autoapi = ">=3.5.0,<4" # https://github.com/conda-forge/sphinx-autoapi-feedstock/pull/50
 sphinx-tippy = ">=0.4.3,<0.5"
 
 [tool.pixi.feature.docs.tasks.clean]
@@ -584,10 +585,10 @@ python = "3.13.*"
 [tool.pixi.feature.test.dependencies]
 codecov = ">=2.1.13,<3"
 pytest = ">=8.4.0,<9"
-pytest-cov = ">=6.1.1,<7"
+pytest-cov = ">=6.1.1,<8"
 pytest-mock = ">=3.14.1,<4"
 pytest-pretty = ">=1.3.0,<2"
-pytest-pyvista = ">=0.2.0,<0.3"
+pytest-pyvista = ">=0.3.1,<0.4"
 
 [tool.pixi.feature.test.tasks.test-clean]
 cmd = "rm -rf tests/plotting/image_cache test_images"
