configure image cache

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
-image_cache
+doc_image_cache
+unit_image_cache
 test_images
 .tox/
 .nox/
