--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,6 @@ filterwarnings = [
   "ignore:pyvista test cache image dir:UserWarning",
   "ignore:pyvista test generated image dir:UserWarning",
 ]
-image_cache_dir = "tests/plotting/image_cache" # pytest-pyvista option
 log_cli = true
 log_cli_level = "INFO"
 markers = ["example: gallery image tests", "image: plotting image tests"]
@@ -145,6 +144,12 @@ minversion = "6.0"
 required_plugins = "pytest-mock pytest_pyvista"
 testpaths = "tests"
 xfail_strict = true
+# pytest-pyvista options
+doc_image_cache_dir = "tests/plotting/doc_image_cache"
+doc_images_dir = "docs/_build/plot_directive"
+image_cache_dir = "tests/plotting/unit_image_cache"
+image_format = "png"
+max_image_size = 450                                   # pixels
 
 
 [tool.repo-review]
@@ -576,7 +581,7 @@ pytest-pretty = ">=1.3.0,<2"
 pytest-pyvista = ">=0.3.1,<0.4"
 
 [tool.pixi.feature.test.tasks.test-clean]
-cmd = "rm -rf tests/plotting/image_cache test_images"
+cmd = "rm -rf tests/plotting/doc_image_cache tests/plotting/unit_image_cache test_images"
 
 [tool.pixi.feature.test.tasks.test]
 args = [{ "arg" = "option", "default" = "" }]
