--- a/codecov.yml
+++ b/codecov.yml
@@ -10,8 +10,8 @@ coverage:
 ignore:
   - "**/cache/registry.txt"
   - "**/cli.py"
-  - "**/doc_image_cache"
   - "**/geoplotter.py"
+  - "**/image_cache"
   - "**/pantry/data.py"
   - "**/pantry/meshes.py"
   - "**/report.py"
