--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ required_plugins = "pytest-mock pytest_pyvista"
 testpaths = "tests"
 xfail_strict = true
 # pytest-pyvista options
+doc_failed_image_dir = "test_images_failed"
 doc_image_cache_dir = "docs/image_cache"
 doc_images_dir = "docs/_build/plot_directive"
 image_cache_dir = "tests/plotting/unit_image_cache"
@@ -597,7 +598,7 @@ pytest-pretty = ">=1.3.0,<2"
 pytest-pyvista = ">=0.3.1,<0.4"
 
 [tool.pixi.feature.test.tasks.test-clean]
-cmd = "rm -rf tests/plotting/unit_image_cache test_images"
+cmd = "rm -rf tests/plotting/unit_image_cache test_images test_images_failed"
 
 [tool.pixi.feature.test.tasks.test]
 args = [{ "arg" = "option", "default" = "" }]
